Added a dialog box prompting you to apply encoding profile changes to the queue if you've switched settings before encoding. This should help avoid situations where a user's changes don't get applied to the encoded items.
--HG--
branch : beta

--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -408,6 +408,7 @@
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Messages\ContainerChangedMessage.cs" />
+    <Compile Include="Messages\EncodingProfileChangedMessage.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
     <Compile Include="Model\EncodeResultStatus.cs" />
     <Compile Include="Model\SourcePath.cs" />
