--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -799,12 +799,14 @@
     <EmbeddedResource Include="Resources\ChapterMarkersRes.hu.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.it.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.ja.resx" />
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.pt.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>ChapterMarkersRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\ChapterMarkersRes.ru.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\ChapterMarkersRes.zh.resx" />
     <EmbeddedResource Include="Resources\CommonRes.cs.resx" />
@@ -814,7 +816,9 @@
     <EmbeddedResource Include="Resources\CommonRes.fr.resx" />
     <EmbeddedResource Include="Resources\CommonRes.it.resx" />
     <EmbeddedResource Include="Resources\CommonRes.ja.resx" />
+    <EmbeddedResource Include="Resources\CommonRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\CommonRes.pt.resx" />
+    <EmbeddedResource Include="Resources\CommonRes.ru.resx" />
     <EmbeddedResource Include="Resources\CommonRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\CommonRes.zh.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.cs.resx" />
@@ -825,12 +829,14 @@
     <EmbeddedResource Include="Resources\EncodeDetailsRes.hu.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.it.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.ja.resx" />
+    <EmbeddedResource Include="Resources\EncodeDetailsRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.pt.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EncodeDetailsRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\EncodeDetailsRes.ru.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\EncodeDetailsRes.zh.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.cs.resx" />
@@ -841,12 +847,14 @@
     <EmbeddedResource Include="Resources\EncodingRes.hu.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.it.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.ja.resx" />
+    <EmbeddedResource Include="Resources\EncodingRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.pt.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EncodingRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\EncodingRes.ru.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\EncodingRes.zh.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.cs.resx" />
@@ -859,12 +867,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\EnumsRes.it.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.ja.resx" />
+    <EmbeddedResource Include="Resources\EnumsRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.pt.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EnumsRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\EnumsRes.ru.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\EnumsRes.zh.resx" />
     <EmbeddedResource Include="Resources\LogRes.cs.resx" />
@@ -875,11 +885,13 @@
     <EmbeddedResource Include="Resources\LogRes.hu.resx" />
     <EmbeddedResource Include="Resources\LogRes.it.resx" />
     <EmbeddedResource Include="Resources\LogRes.ja.resx" />
+    <EmbeddedResource Include="Resources\LogRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\LogRes.pt.resx" />
     <EmbeddedResource Include="Resources\LogRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>LogRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\LogRes.ru.resx" />
     <EmbeddedResource Include="Resources\LogRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\LogRes.zh.resx" />
     <EmbeddedResource Include="Resources\MainRes.cs.resx" />
@@ -894,12 +906,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\MainRes.it.resx" />
     <EmbeddedResource Include="Resources\MainRes.ja.resx" />
+    <EmbeddedResource Include="Resources\MainRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\MainRes.pt.resx" />
     <EmbeddedResource Include="Resources\MainRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MainRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\MainRes.ru.resx" />
     <EmbeddedResource Include="Resources\MainRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\MainRes.zh.resx" />
     <EmbeddedResource Include="Resources\MiscRes.cs.resx" />
@@ -910,12 +924,14 @@
     <EmbeddedResource Include="Resources\MiscRes.hu.resx" />
     <EmbeddedResource Include="Resources\MiscRes.it.resx" />
     <EmbeddedResource Include="Resources\MiscRes.ja.resx" />
+    <EmbeddedResource Include="Resources\MiscRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\MiscRes.pt.resx" />
     <EmbeddedResource Include="Resources\MiscRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>MiscRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\MiscRes.ru.resx" />
     <EmbeddedResource Include="Resources\MiscRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\MiscRes.zh.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.cs.resx" />
@@ -926,12 +942,14 @@
     <EmbeddedResource Include="Resources\OptionsRes.hu.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.it.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.ja.resx" />
+    <EmbeddedResource Include="Resources\OptionsRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.pt.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>OptionsRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\OptionsRes.ru.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\OptionsRes.zh.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.cs.resx" />
@@ -942,11 +960,13 @@
     <EmbeddedResource Include="Resources\PreviewRes.hu.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.it.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.ja.resx" />
+    <EmbeddedResource Include="Resources\PreviewRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.pt.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>PreviewRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\PreviewRes.ru.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\PreviewRes.zh.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.cs.resx" />
@@ -957,11 +977,13 @@
     <EmbeddedResource Include="Resources\QueueTitlesRes.hu.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.it.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.ja.resx" />
+    <EmbeddedResource Include="Resources\QueueTitlesRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.pt.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>QueueTitlesRes.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\QueueTitlesRes.ru.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\QueueTitlesRes.zh.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.cs.resx" />
@@ -975,6 +997,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\SubtitleRes.it.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.ja.resx" />
+    <EmbeddedResource Include="Resources\SubtitleRes.pt-BR.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.pt.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -987,6 +1010,7 @@
       <LastGenOutput>CommonRes.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources\SubtitleRes.ru.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.zh-Hant.resx" />
     <EmbeddedResource Include="Resources\SubtitleRes.zh.resx" />
     <None Include="App.config">
