--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -186,7 +186,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MvvmLightLibs.4.4.32.1\lib\net40\GalaSoft.MvvmLight.Extras.dll</HintPath>
     </Reference>
-    <Reference Include="HandBrakeInterop">
+    <Reference Include="HandBrake.ApplicationServices">
       <HintPath>..\Lib\$(Platform)\HandBrake.ApplicationServices.dll</HintPath>
     </Reference>
     <Reference Include="Hardcodet.Wpf.TaskbarNotification, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
@@ -425,12 +425,11 @@
     <Compile Include="Converters\TitleDisplayConverter.cs" />
     <Compile Include="DataReaderExtensions.cs" />
     <Compile Include="EnumStringConverter.cs" />
-    <Compile Include="Extensions\FrameRateExtensions.cs" />
-    <Compile Include="Extensions\JsonDurationExtensions.cs" />
     <Compile Include="Extensions\JsonScanObjectExtensions.cs" />
     <Compile Include="Extensions\RectExtensions.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Extensions\TitleExtensions.cs" />
+    <Compile Include="Extensions\VCProfileExtensions.cs" />
     <Compile Include="Extensions\WindowExtensions.cs" />
     <Compile Include="Messages\ContainerChangedMessage.cs" />
     <Compile Include="Messages\EncodingProfileChangedMessage.cs" />
@@ -439,26 +438,7 @@
     <Compile Include="Messages\TitleRangeSelectChangedMessage.cs" />
     <Compile Include="Model\EncodeJobsXml.cs" />
     <Compile Include="Model\EncodeResultStatus.cs" />
-    <Compile Include="Model\Encoding\AudioCodec.cs" />
-    <Compile Include="Model\Encoding\AudioEncodeRateType.cs" />
-    <Compile Include="Model\Encoding\AudioEncoding.cs" />
-    <Compile Include="Model\Encoding\TitleType.cs" />
-    <Compile Include="Model\Encoding\VCCropping.cs" />
-    <Compile Include="Model\Encoding\JsonEncodeFactory.cs" />
-    <Compile Include="Model\Encoding\SourceSubtitle.cs" />
-    <Compile Include="Model\Encoding\SourceType.cs" />
-    <Compile Include="Model\Encoding\SrtSubtitle.cs" />
-    <Compile Include="Model\Encoding\Subtitles.cs" />
-    <Compile Include="Model\Encoding\VCAnamorphic.cs" />
-    <Compile Include="Model\Encoding\VCCroppingType.cs" />
-    <Compile Include="Model\Encoding\VCDecomb.cs" />
-    <Compile Include="Model\Encoding\VCDeinterlace.cs" />
-    <Compile Include="Model\Encoding\VCDetelecine.cs" />
-    <Compile Include="Model\Encoding\VCOutputExtension.cs" />
-    <Compile Include="Model\Encoding\VCPictureRotation.cs" />
-    <Compile Include="Model\Encoding\VCScaleMethod.cs" />
-    <Compile Include="Model\Encoding\VCVideoEncodeRateType.cs" />
-    <Compile Include="Model\Encoding\VideoRangeType.cs" />
+    <Compile Include="Model\TitleType.cs" />
     <Compile Include="Model\Picker.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -468,8 +448,6 @@
     <Compile Include="Model\SourcePath.cs" />
     <Compile Include="Model\UpdateInfo.cs" />
     <Compile Include="Model\UpdateState.cs" />
-    <Compile Include="Model\Encoding\VCContainer.cs" />
-    <Compile Include="Model\Encoding\VCDenoise.cs" />
     <Compile Include="Model\WindowPlacer\WindowPlacerLocation.cs" />
     <Compile Include="Model\WindowPlacer\WindowPosition.cs" />
     <Compile Include="Resources\ChapterMarkersRes.Designer.cs">
@@ -580,8 +558,6 @@
     <Compile Include="Model\PreviewImageJob.cs" />
     <Compile Include="Model\PreviewDisplay.cs" />
     <Compile Include="Model\SaveImageJob.cs" />
-    <Compile Include="Model\Encoding\VCJob.cs" />
-    <Compile Include="Model\Encoding\VCProfile.cs" />
     <Compile Include="Model\VideoSourceMetadata.cs" />
     <Compile Include="Model\Players\VlcPlayer.cs" />
     <Compile Include="Model\WhenFileExists.cs" />
@@ -1171,12 +1147,16 @@
       <Project>{847f9e68-0ea8-4ab1-a1e6-9c327612a0ab}</Project>
       <Name>VidCoderCLI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\VidCoderCommon\VidCoderCommon.csproj">
+      <Project>{f7266c99-eeac-4334-be83-47ad13eb522c}</Project>
+      <Name>VidCoderCommon</Name>
+    </ProjectReference>
     <ProjectReference Include="..\VidCoderWindowlessCLI\VidCoderWindowlessCLI.csproj">
       <Project>{4c1e1b61-6736-45b1-8700-4fc52f9a940f}</Project>
       <Name>VidCoderWindowlessCLI</Name>
     </ProjectReference>
     <ProjectReference Include="..\VidCoderWorker\VidCoderWorker.csproj">
-      <Project>{63452895-7AA1-45EC-A0D8-3F30CCFA6D0D}</Project>
+      <Project>{63452895-7aa1-45ec-a0d8-3f30ccfa6d0d}</Project>
       <Name>VidCoderWorker</Name>
     </ProjectReference>
   </ItemGroup>
