--- a/VidCoderWorker/VidCoderWorker.csproj
+++ b/VidCoderWorker/VidCoderWorker.csproj
@@ -66,10 +66,11 @@
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HandBrakeInterop">
+    <Reference Include="HandBrake.ApplicationServices">
       <HintPath>..\Lib\$(Platform)\HandBrake.ApplicationServices.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -86,13 +87,17 @@
   <ItemGroup>
     <Compile Include="EncodeState.cs" />
     <Compile Include="HandBrakeEncoder.cs" />
-    <Compile Include="IHandBrakeEncoder.cs" />
-    <Compile Include="IHandBrakeEncoderCallback.cs" />
     <Compile Include="PreviewImage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WorkerDatabase.cs" />
     <Compile Include="WorkerLogger.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\VidCoderCommon\VidCoderCommon.csproj">
+      <Project>{f7266c99-eeac-4334-be83-47ad13eb522c}</Project>
+      <Name>VidCoderCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
