--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -609,11 +609,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Include="ViewModel\Components\OutputPathViewModel.cs" />
-    <Compile Include="ViewModel\Components\PickersViewModel.cs" />
-    <Compile Include="ViewModel\Components\PresetsViewModel.cs" />
-    <Compile Include="ViewModel\Components\ProcessingViewModel.cs" />
-    <Compile Include="ViewModel\Components\WindowManagerViewModel.cs" />
+    <Compile Include="Services\OutputPathService.cs" />
+    <Compile Include="Services\PickersService.cs" />
+    <Compile Include="Services\PresetsService.cs" />
+    <Compile Include="Services\ProcessingService.cs" />
+    <Compile Include="Services\WindowManagerService.cs" />
     <Compile Include="ViewModel\DataModels\AdvancedChoices.cs" />
     <Compile Include="ViewModel\DataModels\AudioTrackViewModel.cs" />
     <Compile Include="ViewModel\DataModels\BitrateChoiceViewModel.cs" />
