--- a/VidCoder/packages.config
+++ b/VidCoder/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net40-Client" />
-  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net40-Client" />
-  <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="net40-Client" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40-Client" />
-  <package id="valueinjecter" version="2.3.3" targetFramework="net40-Client" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net45" />
+  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="ValueInjecter" version="3.0.1.1" targetFramework="net45" />
 </packages>
