--- a/VidCoder/VidCoder.csproj
+++ b/VidCoder/VidCoder.csproj
@@ -440,6 +440,7 @@
     <Compile Include="DataReaderExtensions.cs" />
     <Compile Include="EnumStringConverter.cs" />
     <Compile Include="Extensions\JsonScanObjectExtensions.cs" />
+    <Compile Include="Extensions\PresetExtensions.cs" />
     <Compile Include="Extensions\RectExtensions.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Extensions\TitleExtensions.cs" />
@@ -569,7 +570,6 @@
     <Compile Include="Model\LogEntry.cs" />
     <Compile Include="Model\LogSource.cs" />
     <Compile Include="Model\LogType.cs" />
-    <Compile Include="Model\PresetCollection.cs" />
     <Compile Include="Model\PreviewImageJob.cs" />
     <Compile Include="Model\PreviewDisplay.cs" />
     <Compile Include="Model\SaveImageJob.cs" />
@@ -744,7 +744,6 @@
     <Compile Include="EventArgs.cs" />
     <Compile Include="Model\DriveInformation.cs" />
     <Compile Include="Model\EncodeJobsPersist.cs" />
-    <Compile Include="Model\Preset.cs" />
     <Compile Include="Model\Presets.cs" />
     <Compile Include="Utilities\DispatchUtilities.cs" />
     <Compile Include="Services\DriveService.cs" />
